# minio-install

./: .gitignore  README.md  ansible.cfg  docker.yml  facts.yml  inventory-vault.yml  inventory.yml  minio_cluster_join.py  playbook.yml  pyproject.toml  requirements.yml
.github/files/: requirements-dev.txt
.github/workflows/: linting.yml
files/: cluster_join.py
group_vars/: kes_servers.yml  minio_servers.yml
tasks/: asserts.yml  certs.yml  install.yml  kes.yml  kes_asserts.yml  kes_install.yml  kes_uninstall.yml  mc.yml  minio_asserts.yml  minio_install.yml  minio_uninstall.yml
tasks/kes/: install.yml
tasks/minio/: install.yml  main.yml  uninstall.yml
tasks/minio/install/: admin_mc.yml  main.yml
tasks/minio/prerequisites/: asserts.yml  main.yml
templates/: kes.service.j2  minio.service.j2
